--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -13,3 +13,20 @@
   website: https://ghost.org/
   location: San Francisco
   profile_image: img/alex-knight-326705-unsplash.jpg
+- name: Juan Barahona
+  avatar: avatars/ghost.png
+  bio: perfil para hacer ventas online
+  twitter: TryGhost
+  facebook: ghost
+  website: https://ghost.org/
+  location: San Francisco
+  profile_image: img/alex-knight-326705-unsplash.jpg
+
+- name: skiper
+  avatar: avatars/ghost.png
+  bio: perfil para hacer ventas online
+  twitter: TryGhost
+  facebook: ghost
+  website: https://ghost.org/
+  location: San Francisco
+  profile_image: img/alex-knight-326705-unsplash.jpg
