--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -22,11 +22,9 @@
   location: San Francisco
   profile_image: img/alex-knight-326705-unsplash.jpg
 
-- name: skiper
+- name: skiperes
   avatar: avatars/ghost.png
   bio: perfil para hacer ventas online
-  twitter: TryGhost
-  facebook: ghost
-  website: https://ghost.org/
+  website: https://valordigital.com.mx/
   location: San Francisco
   profile_image: img/alex-knight-326705-unsplash.jpg
