--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -22,7 +22,7 @@
   location: San Francisco
   profile_image: img/alex-knight-326705-unsplash.jpg
 
-- name: skiperes
+- name: skiper
   avatar: avatars/ghost.png
   bio: perfil para hacer ventas online
   website: https://valordigital.com.mx/
